# ollive-fs

./: .env.example  .gitignore  README.md  docker-compose.yml  prompt.md  task.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: routes.py  schemas.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/services/: chat_service.py  claude_client.py  event_bus.py  inference_logger.py  llm_client.py  pii.py  pricing.py
backend/app/workers/: ingestion.py  log_consumer.py
backend/tests/: test_pii.py  test_pricing.py  test_schemas.py
deploy/k8s/: 10-config.yaml  11-secret.template.yaml  20-postgres.yaml  21-redis.yaml  30-backend.yaml  31-frontend.yaml  README.md
docs/: ARCHITECTURE.md
docs/nginx/: ollive  ollive-proxy.conf
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: Chat.tsx  Dashboard.tsx  ProviderSelect.tsx  Sparkline.tsx  TopBar.tsx
frontend/src/lib/: api.ts
